[package]
name = "echotap-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["rustls-tls", "multipart"]}
tokio = {version = "1.34.0", features = ["macros", "rt-multi-thread"]}
worker = "0.0.18"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"